--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>dhbw.sose2022.softwareengineering</groupId>
+            <artifactId>airportargentsim</artifactId>
+            <version>0.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
